# FuckRun

./: Cargo.toml  README.md  README_ZH_CN.md
.fuckrun/processes/web/: state.json
.github/workflows/: release.yml
app/web/: app.py  config.yaml
docs/: commands.md  commands_en.md  config.md  config_en.md  health-check.md  health-check_en.md  list.md  logs.md  monitor.md  start.md  status.md  stop.md  troubleshooting.md  troubleshooting_en.md
examples/: config.yaml
src/: config.rs  daemon.rs  fs.rs  logger.rs  main.rs  process.rs  service.rs  state.rs  test_fs.rs  types.rs  workspace.rs
src/cli/: mod.rs
src/commands/: list.rs  logs.rs  mod.rs  monitor.rs  start.rs  status.rs  stop.rs
src/process/: daemon.rs  manager.rs  mod.rs
